--- a/index.html
+++ b/index.html
@@ -441,50 +441,60 @@ sigma_b   0.7007261 0.1246 0.0008812       0.001655
 <p>According to the BIC and WAIC values in the table above, we can see that model 4 has the lowest WAIC among these three models. We can then summarize the posterior distribution of L4 with the <strong><em>summary()</em></strong> function as:</p>
 
 <pre><code>&gt; summary(L4_result$post_summary)
-                       Mean         SD     Naive SE Time-series SE
-a[1]           -1.651674140 0.38186812 0.0027002154    0.004879634
-a[2]            1.029455547 0.76992876 0.0054442184    0.007200982
-a[3]           -0.447599745 0.51547315 0.0036449456    0.005530853
-a[4]            0.546810962 0.67984946 0.0048072617    0.006687512
-a[5]            0.136480949 0.60239446 0.0042595721    0.005966830
-a[6]            0.535923970 0.66998439 0.0047375051    0.006276845
-a[7]            0.519061256 0.68674737 0.0048560372    0.006519361
-a[8]           -0.467438591 0.51890334 0.0036692007    0.005693154
-a[9]            0.523479478 0.67846659 0.0047974833    0.006230641
-a[10]           1.035360069 0.77143129 0.0054548430    0.007454912
-a[11]           1.049869155 0.76432484 0.0054045928    0.007214576 
+
+                    Mean      SD  Naive SE Time-series SE
+a[1]           -1.666619 0.38431 0.0027175       0.005483
+a[2]            1.039674 0.77228 0.0054608       0.007939
+a[3]           -0.436582 0.52398 0.0037051       0.005583
+a[4]            0.523383 0.67314 0.0047598       0.006237
+a[5]            0.130259 0.61050 0.0043169       0.006002
+a[6]            0.550793 0.68563 0.0048481       0.006804
+a[7]            0.508255 0.67759 0.0047913       0.006294
+a[8]           -0.462363 0.51865 0.0036674       0.005491
+a[9]            0.523246 0.68582 0.0048495       0.006715
+a[10]           1.032644 0.77398 0.0054729       0.007208
+a[11]           1.052646 0.77478 0.0054785       0.007389
+a[12]          -0.185695 0.56195 0.0039736       0.005674
+a[13]           0.128977 0.62340 0.0044081       0.006219
+.
+.
+alpha[1]        0.000000 0.00000 0.0000000       0.000000
+alpha[2]        0.522522 0.15767 0.0011149       0.003081
+alpha[3]        0.469008 0.15717 0.0011114       0.003916
+alpha[4]        0.870208 0.17169 0.0012141       0.003330
 .
 .
 .
-.
-beta0           3.217671589 0.15527295 0.0010979456    0.004889324
-sigma_a         1.042560073 0.10279647 0.0007268808    0.001817836
-sigma_alpha_a   0.317394541 0.14507561 0.0010258394    0.020849972
-sigma_b         0.443902891 0.08877508 0.0006277346    0.002598334
+b[72]           0.154551 0.33365 0.0023593       0.003061
+beta0           3.220296 0.15636 0.0011056       0.004975
+sigma_a         1.044492 0.10276 0.0007266       0.002024
+sigma_alpha_a   0.307304 0.15130 0.0010699       0.024015
+sigma_b         0.445203 0.08643 0.0006111       0.002314
 
 2. Quantiles for each variable:
 
-                   2.5%       25%       50%       75%    97.5%
-a[1]           -2.38914 -1.911754 -1.659339 -1.400410 -0.88743
-a[2]           -0.34661  0.497792  0.975816  1.528980  2.64438
-a[3]           -1.39199 -0.806694 -0.469248 -0.115705  0.60561
-a[4]           -0.67710  0.069030  0.518771  0.983691  1.99242
-a[5]           -0.95792 -0.286522  0.108670  0.525298  1.39232
-a[6]           -0.66690  0.059904  0.502328  0.968129  1.95428
-a[7]           -0.71599  0.040254  0.478461  0.961174  1.96379
-a[8]           -1.42810 -0.827322 -0.484480 -0.131673  0.59941
-a[9]           -0.69629  0.052312  0.487627  0.950006  1.95645
-a[10]          -0.35858  0.494469  0.993932  1.532204  2.68696
-a[11]          -0.31349  0.512905  1.005407  1.533181  2.68946
+                   2.5%       25%        50%       75%    97.5%
+a[1]           -2.40264 -1.927270 -1.677e+00 -1.416205 -0.88247
+a[2]           -0.34187  0.503281  9.891e-01  1.529061  2.69899
+a[3]           -1.39226 -0.803360 -4.587e-01 -0.096473  0.64460
+a[4]           -0.68471  0.048638  4.834e-01  0.956490  1.93190
+a[5]           -0.97531 -0.294504  9.742e-02  0.526003  1.39432
+a[6]           -0.67287  0.080029  5.096e-01  0.978793  2.01615
+a[7]           -0.71832  0.034044  4.702e-01  0.951443  1.92774
+a[8]           -1.41925 -0.822585 -4.838e-01 -0.125123  0.63022
+a[9]           -0.70916  0.044405  4.846e-01  0.964496  1.95642
+a[10]          -0.34821  0.482410  9.873e-01  1.530585  2.67478
+a[11]          -0.36522  0.518697  1.012e+00  1.544634  2.70457
+
 .
 .
 .
-b[71]          -1.23225 -0.825627 -0.611229 -0.402596 -0.01648
-b[72]          -0.47808 -0.069099  0.146281  0.371175  0.84990
-beta0           2.91566  3.111778  3.214427  3.322229  3.52518
-sigma_a         0.85684  0.970334  1.036779  1.107859  1.25747
-sigma_alpha_a   0.09272  0.199065  0.304277  0.418378  0.62032
-sigma_b         0.27230  0.384950  0.442368  0.501785  0.62098
+b[72]          -0.46948 -0.069610  1.445e-01  0.364310  0.85110
+beta0           2.92314  3.115602  3.216e+00  3.324324  3.53517
+sigma_a         0.85986  0.973533  1.038e+00  1.109433  1.26308
+sigma_alpha_a   0.08333  0.182168  2.862e-01  0.420978  0.61780
+sigma_b         0.28170  0.386430  4.423e-01  0.501519  0.62269
+
 </code></pre>
 
 <p>The notation for each model component is as follows:</p>
@@ -536,15 +546,40 @@ sigma_b         0.27230  0.384950  0.442368  0.501785  0.62098
 
 <pre><code>&gt; HPDinterval(L4_result$post_summary)
 [[1]]
-                   lower       upper
-a[1]           -2.37513723 -0.876461878
-a[2]           -0.42330027  2.542678120
-a[3]           -1.45065339  0.535163576
-a[4]           -0.71871493  1.922685809
+                     lower        upper
+a[1]           -2.41025325 -0.894806199
+a[2]           -0.38651414  2.632236211
+a[3]           -1.41609373  0.614345971
+a[4]           -0.76273537  1.836882851
+a[5]           -0.99880603  1.360993525
+a[6]           -0.72229744  1.938909641
+a[7]           -0.75741826  1.868160246
+a[8]           -1.47657183  0.545669511
+a[9]           -0.75937260  1.885694854
+a[10]          -0.47287933  2.529157249
+a[11]          -0.53205566  2.505668419
+a[12]          -1.25500856  0.943159053
+a[13]          -1.08890694  1.345130234
+a[14]          -0.73722657  1.945710439
+a[15]          -1.03913145  1.343106172
+
 .
 .
 .
 .
+alpha[1]        0.00000000  0.000000000
+alpha[2]        0.21653368  0.830800835
+alpha[3]        0.16986439  0.784598683
+alpha[4]        0.54651733  1.222875035
+.
+.
+.
+b[72]          -0.49810276  0.813090875
+beta0           2.92129277  3.532019961
+sigma_a         0.84947106  1.249148289
+sigma_alpha_a   0.06478434  0.569423083
+sigma_b         0.27834271  0.617972602
+
 </code></pre>
 
 <p>To create the density plots and boxplots summarizing the posterior distribution, in particular the condition effects, we can first use the <strong><em>varnames()</em></strong> function in R to see all the variable names in the post summary component of the fitted model. We then extract the corresponding variables to create posterior density plots and item effect boxplots for the parameters that we are interested in.</p>
